--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@
 #header-image {
     height: 35em;
     width: 100%;
-    background: url("/images/header-image.jpg") no-repeat center center;
+    background: url("https://images.pexels.com/photos/863988/pexels-photo-863988.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat center center;
 }
 
 #header-text, #header-text h3 {
