--- a/assets/style.css
+++ b/assets/style.css
@@ -38,7 +38,7 @@
 
 #header-image {
     height: 35em;
-    width: 100%;
+    max-width: 100%;
     background: url("/images/header-image.jpg") no-repeat center center;
 }
 
@@ -52,7 +52,7 @@
 }
 
 #header-text {
-    font-size: 180%;
+    font-size: 150%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 4px;
     text-shadow: 2px 2px black;
@@ -68,4 +68,13 @@
 
     position: absolute;
 
+}
+
+#intro-text {
+    font-family: Poppins;
+    text-align: center;
+    line-height: 2em;
+    margin-top: 2em;
+    margin-left: 3em;
+    margin-right: 3em;
 }
