--- a/assets/style.css
+++ b/assets/style.css
@@ -38,7 +38,8 @@
 
 #header-image {
     height: 35em;
-    max-width: 100%;
+    width: 100%;
+    background: url('https://images.pexels.com/photos/863988/pexels-photo-863988.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center center no-repeat;
 }
 
 #header-text, #header-text h3 {
