--- a/assets/style.css
+++ b/assets/style.css
@@ -86,3 +86,15 @@
     margin-left: 3em;
     margin-right: 3em;
 }
+
+#about-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#swimmer {
+    height: 20px;
+    max-width: 50%;
+}
