--- a/assets/style.css
+++ b/assets/style.css
@@ -87,6 +87,14 @@
     margin-right: 3em;
 }
 
+#about-header {
+    font-family: Anton;
+    letter-spacing: 2px;
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
 #about-section {
     display: flex;
     flex-direction: row;
@@ -95,12 +103,12 @@
 }
 
 #about-text {
-    float: left;
+    align-items: center;
 }
 
 #swimmer {
     height: 30em;
     max-width: 70%;
-    float: right;
+    margin-left: 20em;
     overflow: hidden;
 }
