--- a/assets/style.css
+++ b/assets/style.css
@@ -99,16 +99,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
 }
 
 #about-text {
-    align-items: center;
+    margin-left: 2em;
 }
 
 #swimmer {
     height: 30em;
-    max-width: 70%;
-    margin-left: 20em;
+    width: 65%;
+    margin-left: 25em;
     overflow: hidden;
 }
