--- a/assets/style.css
+++ b/assets/style.css
@@ -109,6 +109,11 @@
 
 @media screen and (max-width: 943px) {
 
+    #header-image {
+        width: 100%;
+        height: 30em;
+    }
+
     #about-text {
         margin-left: 10em;
     }
