--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,26 @@
 
     #header-image {
         width: 100%;
-        height: 30em;
+        height: 15em;
+    }
+
+    #header-text {
+        font-size: 120%;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        letter-spacing: 4px;
+        text-shadow: 2px 2px black;
+    
+        width: 30em;
+        height: 25em;
+    
+        padding-top: 1vh;
+        padding-right: 2em;
+    
+        bottom: 2px;
+        left: 5em;
+    
+        position: absolute;
+    
     }
 
     #about-text {
