--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@
 
     #header-image {
         width: 100%;
-        height: 15em;
+        height: 16em;
     }
 
     #header-text {
@@ -122,15 +122,23 @@
     
         width: 30em;
         height: 25em;
-    
-        padding-top: 1vh;
+        
+        padding-top: 5px;
         padding-right: 2em;
     
-        bottom: 2px;
         left: 5em;
     
         position: absolute;
     
+    }
+
+    #intro-text {
+        font-family: Poppins;
+        text-align: center;
+        margin-top: 1px;
+        line-height: 2em;
+        margin-left: 3em;
+        margin-right: 3em;
     }
 
     #about-text {
