--- a/assets/style.css
+++ b/assets/style.css
@@ -159,19 +159,23 @@
 
 @media screen and (max-width: 1396px) {
 
-    #squads {
-        margin-top: 200px;
-        align-items: center;
+    #squads-header h2 {
+        text-align: center;
+        margin-top: 27em;
     }
 
-    #squads-header {
-        text-align: center;
-        margin-top: 200px;
+    #squads {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 50px;
     }
 
     .squads {
-        width: 33%;
+        text-align: center;
+        width: 100%;
         margin-top: 2em;
+        margin-right: 50%;
     }
 }
 
