--- a/assets/style.css
+++ b/assets/style.css
@@ -176,6 +176,8 @@
         width: 100%;
         margin-top: 2em;
         margin-right: 50%;
+        padding-left: 2em;
+        padding-right: 2em;
     }
 }
 
