--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,28 @@
     letter-spacing: 1px;
 }
 
+#squads2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #62b4cf;
+}
+
+.squads2 {
+    color: white;
+    font-family: Poppins;
+    font-size: 14px;
+    text-align: center;
+    width: 33%;
+    margin-top: 5em;
+}
+
+.squads2 h4{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 1px 1px black;
+    letter-spacing: 1px;
+}
+
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
@@ -184,6 +206,22 @@
         padding-left: 2em;
         padding-right: 2em;
     }
+
+    #squads2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 50px;
+    }
+
+    .squads2 {
+        text-align: center;
+        width: 100%;
+        margin-top: 2em;
+        margin-right: 50%;
+        padding-left: 2em;
+        padding-right: 2em;
+    }
 }
 
 @media screen and (max-width: 943px) {
@@ -199,7 +237,7 @@
         letter-spacing: 4px;
         text-shadow: 2px 2px black;
     
-        width: 25em;
+        width: 30em;
         height: 25em;
         
         margin: 0 auto;
@@ -241,6 +279,17 @@
     }
 
     .squads {
+        text-align: center;
+        width: 100%;
+    }
+
+    #squads2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .squads2 {
         text-align: center;
         width: 100%;
     }
