--- a/assets/style.css
+++ b/assets/style.css
@@ -211,7 +211,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-top: 50px;
+        margin: 0 auto;
     }
 
     .squads2 {
@@ -287,6 +287,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin: 0 auto;
     }
 
     .squads2 {
