--- a/assets/style.css
+++ b/assets/style.css
@@ -186,6 +186,13 @@
     letter-spacing: 1px;
 }
 
+#squads3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #62b4cf;
+}
+
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
