--- a/assets/style.css
+++ b/assets/style.css
@@ -246,6 +246,22 @@
         padding-left: 2em;
         padding-right: 2em;
     }
+
+    #squads3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .squads3 {
+        text-align: center;
+        width: 100%;
+        margin-top: 2em;
+        margin-right: 50%;
+        padding-left: 2em;
+        padding-right: 2em;
+    }
 }
 
 @media screen and (max-width: 943px) {
@@ -321,5 +337,21 @@
     .squads2 {
         text-align: center;
         width: 100%;
+    }
+
+    #squads3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .squads3 {
+        text-align: center;
+        width: 100%;
+        margin-top: 2em;
+        margin-right: 50%;
+        padding-left: 2em;
+        padding-right: 2em;
     }
 }
