--- a/assets/style.css
+++ b/assets/style.css
@@ -208,6 +208,26 @@
     letter-spacing: 1px;
 }
 
+#squads4 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.squads4 {
+    color: black;
+    font-family: Poppins;
+    font-size: 14px;
+    text-align: center;
+    width: 50%;
+    margin-top: 5em;
+}
+
+.squads4 h4{
+    font-family: Anton;
+    color: black;
+    letter-spacing: 1px;
+}
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
