--- a/assets/style.css
+++ b/assets/style.css
@@ -228,6 +228,12 @@
     color: black;
     letter-spacing: 1px;
 }
+
+#fitness-image {
+    height: 30em;
+    width: 100%;
+    margin-left: 13px;
+}
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
