--- a/assets/style.css
+++ b/assets/style.css
@@ -229,6 +229,12 @@
     letter-spacing: 1px;
 }
 
+#fitness-squads {
+    font-family: impact;
+    text-align: center;
+    margin-bottom: 50em;
+}
+
 #fitness-image {
     height: 30em;
     width: 100%;
