--- a/assets/style.css
+++ b/assets/style.css
@@ -295,6 +295,26 @@
         padding-left: 2em;
         padding-right: 2em;
     }
+
+    #squads4 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .squads4 {
+        text-align: center;
+        width: 100%;
+        margin-top: 2em;
+        margin-right: 50%;
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+
+    #fitness-image {
+        margin: 0 auto;
+    }
 }
 
 @media screen and (max-width: 943px) {
@@ -386,5 +406,26 @@
         margin-right: 50%;
         padding-left: 2em;
         padding-right: 2em;
+    }
+
+    #squads4 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .squads4 {
+        text-align: center;
+        width: 100%;
+        margin-top: 2em;
+        margin-right: 50%;
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+
+    #fitness-image {
+        width: 100%;
+        margin: 0 auto;
     }
 }
