--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,7 @@
 }
 
 #about-header {
-    font-family: Impact;
+    font-family: Anton;
     font-weight: bold;
     font-size: 30%;
     letter-spacing: 2px;
@@ -137,7 +137,7 @@
 }
 
 #squads-header {
-    font-family: Impact;
+    font-family: Anton;
     letter-spacing: 1px;
     align-items: center;
 }
@@ -238,6 +238,11 @@
     height: 30em;
     width: 100%;
     margin-left: 13px;
+}
+
+#timetable {
+    font-family: Anton;
+    text-align: center;
 }
 
 @media screen and (max-width: 1396px) {
