added padding to cells

--- a/assets/style.css
+++ b/assets/style.css
@@ -255,6 +255,10 @@
     padding-right: 1em;
 }
 
+.training {
+    padding-right: 1em;
+}
+
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
