--- a/assets/style.css
+++ b/assets/style.css
@@ -260,6 +260,11 @@
     padding-bottom: 1em;
 }
 
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
