--- a/assets/style.css
+++ b/assets/style.css
@@ -142,6 +142,8 @@
     color: #62b4cf;
     letter-spacing: 1px;
     align-items: center;
+    margin-top: 5em;
+    padding-bottom: 5em;
 }
 
 #squads {
@@ -256,7 +258,7 @@
 #table {
     margin-left: auto;
     margin-right: auto;
-    background-color: #1E90FF;
+    background-color: #62b4cf;
 }
 
 .headers {
