--- a/assets/style.css
+++ b/assets/style.css
@@ -259,7 +259,7 @@
     text-align: center;
 }
 
-#table {
+.table {
     margin-left: auto;
     margin-right: auto;
     background-color: #62b4cf;
