--- a/assets/style.css
+++ b/assets/style.css
@@ -326,7 +326,9 @@ table, th, td {
 
 .form-label {
     font-family: Poppins;
+    font-size: 16px;
     color: white;
+    text-shadow: 1px 1px black;
     border-radius: 25px;
 }
 
@@ -336,9 +338,11 @@ table, th, td {
 
 button {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: black;
-    font-size: 25px;
-    background-color: white;
+    color: white;
+    font-size: 22px;
+    background-color: #0000ff;
+    padding: 6px;
+    margin-left: 20em;
 }
 
 @media screen and (max-width: 1396px) {
