--- a/assets/style.css
+++ b/assets/style.css
@@ -474,7 +474,7 @@ button {
 
     #footer {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
     }
 }
@@ -612,11 +612,27 @@ button {
 
     #footer {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
+        width: 100%;
     }
 
     #footer div {
-        width: 20%;
+        width: 18%;
+        margin-top: 8em !important;
+        padding-top: 3em;
+        padding-bottom: 3em;
+        margin: 0 auto;
+        padding: 0px; 
+        background-color: rgba(0, 0, 0, 0.19);
+        position: relative;
+    }
+
+    #footer h2 {
+        font-family: Poppins;
+        font-size: 12px;
+        color: white;
+        text-shadow: 1px 1px black;
+        align-content: center;
     }
 }
