--- a/assets/style.css
+++ b/assets/style.css
@@ -387,6 +387,15 @@ button {
     position: relative;
 }
 
+#footer h2 {
+    font-family: Poppins;
+    font-size: 20px;
+    color: white;
+    text-shadow: 1px 1px black;
+    text-align: center;
+    padding: 2em;
+}
+
 @media screen and (max-width: 1396px) {
 
     #squads-header h2 {
@@ -633,6 +642,7 @@ button {
         font-size: 12px;
         color: white;
         text-shadow: 1px 1px black;
-        align-content: center;
+        text-align: center;
+        padding: 0 auto;
     }
 }
