--- a/assets/style.css
+++ b/assets/style.css
@@ -502,6 +502,7 @@ button {
         font-size: 12px;
         color: white;
         text-shadow: 1px 1px black;
+        padding: 1em;
     }
 }
 
