--- a/assets/style.css
+++ b/assets/style.css
@@ -509,11 +509,11 @@ button {
 @media screen and (max-width: 943px) {
 
     .container {
-        overflow-x: hidden;
         overflow-y: hidden;
+        padding-left: -50px;
         padding-bottom: 1em;
     }
-
+    
     #header-image {
         width: 100%;
         height: 16em;
