--- a/assets/style.css
+++ b/assets/style.css
@@ -525,10 +525,9 @@ button {
         letter-spacing: 4px;
         text-shadow: 2px 2px black;
     
-        width: 30em;
+        width: 100%;
         height: 25em;
         
-        margin: 0 auto;
         padding-top: 5px;
         padding-right: 2em;
     
