--- a/assets/style.css
+++ b/assets/style.css
@@ -504,13 +504,18 @@ button {
         text-shadow: 1px 1px black;
         padding: 1em;
     }
+
+    #footer-image {
+        height: 30em;
+        width: 100%;
+        position: absolute;
+    }
 }
 
 @media screen and (max-width: 943px) {
 
     .container {
         overflow-y: hidden;
-        padding-left: -50px;
         padding-bottom: 1em;
     }
     
@@ -520,17 +525,17 @@ button {
     }
 
     #header-text {
-        font-size: 100%;
+        font-size: 130%;
         font-family: Anton;
         letter-spacing: 4px;
         text-shadow: 2px 2px black;
-    
+   
         width: 100%;
         height: 25em;
-        
+       
         padding-top: 5px;
         padding-right: 4em;
-    
+   
         position: absolute;
     
     }
@@ -652,7 +657,7 @@ button {
 
     #footer div {
         width: 18%;
-        margin-top: 8em !important;
+        margin-top: 6em !important;
         padding-top: 3em;
         padding-bottom: 3em;
         margin: 0 auto;
@@ -667,5 +672,11 @@ button {
         text-shadow: 1px 1px black;
         padding: 1em;
         padding-right: 1.5em !important;
+    }
+
+    #footer-image {
+        height: 20em;
+        width: 100%;
+        position: absolute;
     }
 }
