--- a/assets/style.css
+++ b/assets/style.css
@@ -514,6 +514,10 @@ button {
 
 @media screen and (max-width: 943px) {
     
+    .container {
+        width: 135%;
+        padding-left: -50px;
+    }
     #header-image {
         width: 100%;
         height: 16em;
